增加登出按鈕、調整判斷

--- a/GoogleLoginDemo/Views/Home/Index.cshtml
+++ b/GoogleLoginDemo/Views/Home/Index.cshtml
@@ -29,3 +29,13 @@
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
     </div>
 </div>
+
+@if (TempData["message"] != null)
+{
+    <script>
+        $(function () {
+            var message = @Html.Raw(Json.Encode(TempData["message"]));
+            alert(message);
+        });
+    </script>
+}
