--- a/GoogleLoginDemo/Views/Login/LoginComplete.cshtml
+++ b/GoogleLoginDemo/Views/Login/LoginComplete.cshtml
@@ -15,6 +15,19 @@
         @Session["UserId"]
         @Session["UserEmail"]
         @Session["UserGivenName"]
+        @Session["AccessToken"]
+        <br />
+        <a href="@Url.Action("Logout", "Login")">Logout</a>
     </div>
 </body>
 </html>
+
+@if (TempData["message"] != null)
+{
+    <script>
+        $(function () {
+            var message = @Html.Raw(Json.Encode(TempData["message"]));
+            alert(message);
+        });
+    </script>
+}
